
"""
Revision ID: bb6fcf23bd53
Revises: 
Create Date: 2025-06-04 13:11:19.486448

"""
from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision = 'bb6fcf23bd53'
down_revision = None
branch_labels = None
depends_on = None

def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('activitytypes',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('type_name', sa.String(), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('is_system', sa.Boolean(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.CheckConstraint("type_name ~ '^[a-z_]+$'", name='check_type_name_format'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('type_name')
    )
    op.create_index(op.f('ix_activitytypes_id'), 'activitytypes', ['id'], unique=False)
    op.create_table('audiostatuses',
    sa.Column('status_name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('display_order', sa.Integer(), nullable=True),
    sa.Column('color_code', sa.String(length=7), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.CheckConstraint("color_code ~ '^#[0-9a-fA-F]{6}$'", name='check_color_code_format'),
    sa.CheckConstraint("status_name ~ '^[a-z_]+$'", name='check_status_name_format'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('status_name')
    )
    op.create_index(op.f('ix_audiostatuses_id'), 'audiostatuses', ['id'], unique=False)
    op.create_table('casepriorities',
    sa.Column('priority_name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('weight', sa.Integer(), nullable=False),
    sa.Column('color_code', sa.String(length=7), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.CheckConstraint("color_code ~ '^#[0-9a-fA-F]{6}$'", name='check_color_code_format'),
    sa.CheckConstraint("priority_name ~ '^[a-z_]+$'", name='check_priority_name_format'),
    sa.CheckConstraint('weight > 0', name='check_positive_weight'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('priority_name')
    )
    op.create_index(op.f('ix_casepriorities_id'), 'casepriorities', ['id'], unique=False)
    op.create_table('casestatuses',
    sa.Column('status_name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.Column('display_order', sa.Integer(), nullable=True),
    sa.Column('color_code', sa.String(length=7), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.CheckConstraint("color_code ~ '^#[0-9a-fA-F]{6}$'", name='check_color_code_format'),
    sa.CheckConstraint("status_name ~ '^[a-z_]+$'", name='check_status_name_format'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('status_name')
    )
    op.create_index(op.f('ix_casestatuses_id'), 'casestatuses', ['id'], unique=False)
    op.create_table('languages',
    sa.Column('language_code', sa.String(length=10), nullable=False),
    sa.Column('language_name', sa.String(length=100), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.CheckConstraint("language_code ~ '^[a-z]{2}(-[A-Z]{2})?$'", name='check_language_code_format'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('language_code')
    )
    op.create_index(op.f('ix_languages_id'), 'languages', ['id'], unique=False)
    op.create_table('participantroles',
    sa.Column('role_name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('permissions', sa.JSON(), nullable=False),
    sa.Column('is_system', sa.Boolean(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.CheckConstraint("role_name ~ '^[a-z_]+$'", name='check_role_name_format'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('role_name')
    )
    op.create_index(op.f('ix_participantroles_id'), 'participantroles', ['id'], unique=False)
    op.create_table('sentiments',
    sa.Column('sentiment_name', sa.String(length=50), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('color_code', sa.String(length=7), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.CheckConstraint("color_code ~ '^#[0-9a-fA-F]{6}$'", name='check_color_code_format'),
    sa.CheckConstraint("sentiment_name ~ '^[a-z_]+$'", name='check_sentiment_name_format'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('sentiment_name')
    )
    op.create_index(op.f('ix_sentiments_id'), 'sentiments', ['id'], unique=False)
    op.create_table('user_roles',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('role_name', sa.String(), nullable=True),
    sa.Column('description', sa.String(), nullable=True),
    sa.Column('permissions', sa.JSON(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.CheckConstraint("role_name ~ '^[a-z_]+$'", name='check_role_name_format'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_user_roles_id'), 'user_roles', ['id'], unique=False)
    op.create_index(op.f('ix_user_roles_role_name'), 'user_roles', ['role_name'], unique=True)
    op.create_table('users',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('username', sa.String(), nullable=True),
    sa.Column('email', sa.String(), nullable=True),
    sa.Column('password_hash', sa.String(), nullable=True),
    sa.Column('full_name', sa.String(), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.Column('last_login', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.Column('role_id', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['role_id'], ['user_roles.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_user_role', 'users', ['role_id'], unique=False)
    op.create_index('idx_user_status', 'users', ['is_active'], unique=False)
    op.create_index('idx_user_username_email', 'users', ['username', 'email'], unique=False)
    op.create_index(op.f('ix_users_email'), 'users', ['email'], unique=True)
    op.create_index(op.f('ix_users_id'), 'users', ['id'], unique=False)
    op.create_index(op.f('ix_users_username'), 'users', ['username'], unique=True)
    op.create_table('cases',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('case_code', sa.String(length=50), nullable=False),
    sa.Column('title', sa.String(length=200), nullable=False),
    sa.Column('description', sa.Text(), nullable=True),
    sa.Column('status_id', sa.Integer(), nullable=False),
    sa.Column('priority_id', sa.Integer(), nullable=False),
    sa.Column('created_by', sa.Integer(), nullable=False),
    sa.Column('closed_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('is_archived', sa.Boolean(), nullable=True),
    sa.Column('archive_reason', sa.Text(), nullable=True),
    sa.Column('case_metadata', sa.JSON(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ),
    sa.ForeignKeyConstraint(['priority_id'], ['casepriorities.id'], ),
    sa.ForeignKeyConstraint(['status_id'], ['casestatuses.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_case_archived', 'cases', ['is_archived'], unique=False)
    op.create_index('idx_case_code', 'cases', ['case_code'], unique=False)
    op.create_index('idx_case_created_by', 'cases', ['created_by'], unique=False)
    op.create_index('idx_case_priority', 'cases', ['priority_id'], unique=False)
    op.create_index('idx_case_status', 'cases', ['status_id'], unique=False)
    op.create_index(op.f('ix_cases_case_code'), 'cases', ['case_code'], unique=True)
    op.create_index(op.f('ix_cases_id'), 'cases', ['id'], unique=False)
    op.create_table('caseparticipants',
    sa.Column('case_id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('role_id', sa.Integer(), nullable=False),
    sa.Column('joined_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('left_at', sa.DateTime(timezone=True), nullable=True),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['case_id'], ['cases.id'], ),
    sa.ForeignKeyConstraint(['role_id'], ['participantroles.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('case_id', 'user_id', name='uq_case_user')
    )
    op.create_index('idx_participant_active', 'caseparticipants', ['is_active'], unique=False)
    op.create_index('idx_participant_case', 'caseparticipants', ['case_id'], unique=False)
    op.create_index('idx_participant_role', 'caseparticipants', ['role_id'], unique=False)
    op.create_index('idx_participant_user', 'caseparticipants', ['user_id'], unique=False)
    op.create_index(op.f('ix_caseparticipants_id'), 'caseparticipants', ['id'], unique=False)
    op.create_table('summaries',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('type', sa.String(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('case_id', sa.Integer(), nullable=True),
    sa.Column('files', postgresql.JSONB(astext_type=sa.Text()), nullable=True),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['case_id'], ['cases.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_summary_case', 'summaries', ['case_id'], unique=False)
    op.create_index(op.f('ix_summaries_id'), 'summaries', ['id'], unique=False)
    op.create_table('tasks',
    sa.Column('id', sa.String(), nullable=False),
    sa.Column('filename', sa.String(), nullable=True),
    sa.Column('status', sa.String(), nullable=True),
    sa.Column('result', sa.JSON(), nullable=True),
    sa.Column('error', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.Column('case_id', sa.Integer(), nullable=True),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['case_id'], ['cases.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_task_created_at', 'tasks', ['created_at'], unique=False)
    op.create_index('idx_task_id', 'tasks', ['id'], unique=False)
    op.create_index('idx_task_status', 'tasks', ['status'], unique=False)
    op.create_index('idx_task_updated_at', 'tasks', ['updated_at'], unique=False)
    op.create_index('idx_task_user', 'tasks', ['user_id'], unique=False)
    op.create_index(op.f('ix_tasks_id'), 'tasks', ['id'], unique=False)
    op.create_table('audio_files',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('filename', sa.String(), nullable=True),
    sa.Column('file_path', sa.String(), nullable=True),
    sa.Column('file_size', sa.Integer(), nullable=True),
    sa.Column('duration', sa.Float(), nullable=True),
    sa.Column('status', sa.String(), nullable=True),
    sa.Column('audio_status_id', sa.Integer(), nullable=True),
    sa.Column('processed_at', sa.DateTime(), nullable=True),
    sa.Column('error_message', sa.Text(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.Column('task_id', sa.String(), nullable=True),
    sa.Column('case_id', sa.Integer(), nullable=False),
    sa.Column('language_id', sa.Integer(), nullable=False),
    sa.Column('uploaded_by', sa.Integer(), nullable=False),
    sa.Column('is_archived', sa.Boolean(), nullable=True),
    sa.Column('archive_reason', sa.Text(), nullable=True),
    sa.Column('storage_type', sa.String(length=50), nullable=True),
    sa.Column('storage_config', sa.JSON(), nullable=True),
    sa.Column('extra_metadata', sa.JSON(), nullable=True),
    sa.ForeignKeyConstraint(['audio_status_id'], ['audiostatuses.id'], ),
    sa.ForeignKeyConstraint(['case_id'], ['cases.id'], ),
    sa.ForeignKeyConstraint(['language_id'], ['languages.id'], ),
    sa.ForeignKeyConstraint(['task_id'], ['tasks.id'], ),
    sa.ForeignKeyConstraint(['uploaded_by'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_audio_archived', 'audio_files', ['is_archived'], unique=False)
    op.create_index('idx_audio_case', 'audio_files', ['case_id'], unique=False)
    op.create_index('idx_audio_language', 'audio_files', ['language_id'], unique=False)
    op.create_index('idx_audio_status', 'audio_files', ['status'], unique=False)
    op.create_index('idx_audio_storage', 'audio_files', ['storage_type'], unique=False)
    op.create_index('idx_audio_uploaded_by', 'audio_files', ['uploaded_by'], unique=False)
    op.create_index(op.f('ix_audio_files_id'), 'audio_files', ['id'], unique=False)
    op.create_table('activitylogs',
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('case_id', sa.Integer(), nullable=True),
    sa.Column('audio_id', sa.Integer(), nullable=True),
    sa.Column('activity_type_id', sa.Integer(), nullable=False),
    sa.Column('task_id', sa.String(), nullable=True),
    sa.Column('action_detail', sa.JSON(), nullable=True),
    sa.Column('ip_address', sa.String(length=45), nullable=True),
    sa.Column('user_agent', sa.String(length=500), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['activity_type_id'], ['activitytypes.id'], ),
    sa.ForeignKeyConstraint(['audio_id'], ['audio_files.id'], ),
    sa.ForeignKeyConstraint(['case_id'], ['cases.id'], ),
    sa.ForeignKeyConstraint(['task_id'], ['tasks.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_activity_audio', 'activitylogs', ['audio_id'], unique=False)
    op.create_index('idx_activity_case', 'activitylogs', ['case_id'], unique=False)
    op.create_index('idx_activity_created', 'activitylogs', ['created_at'], unique=False)
    op.create_index('idx_activity_task', 'activitylogs', ['task_id'], unique=False)
    op.create_index('idx_activity_type', 'activitylogs', ['activity_type_id'], unique=False)
    op.create_index('idx_activity_user', 'activitylogs', ['user_id'], unique=False)
    op.create_index(op.f('ix_activitylogs_id'), 'activitylogs', ['id'], unique=False)
    op.create_table('analysis_results',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('summary', sa.Text(), nullable=True),
    sa.Column('keywords', sa.JSON(), nullable=True),
    sa.Column('entities', sa.JSON(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.Column('task_id', sa.String(), nullable=True),
    sa.Column('audio_id', sa.Integer(), nullable=False),
    sa.Column('version', sa.Integer(), nullable=False),
    sa.Column('sentiment_id', sa.Integer(), nullable=True),
    sa.Column('created_by', sa.Integer(), nullable=False),
    sa.Column('confidence_score', sa.Integer(), nullable=True),
    sa.Column('processing_time', sa.Integer(), nullable=True),
    sa.Column('extra_metadata', sa.JSON(), nullable=True),
    sa.ForeignKeyConstraint(['audio_id'], ['audio_files.id'], ),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ),
    sa.ForeignKeyConstraint(['sentiment_id'], ['sentiments.id'], ),
    sa.ForeignKeyConstraint(['task_id'], ['tasks.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('audio_id', 'version', name='uq_analysis_audio_version')
    )
    op.create_index('idx_analysis_audio', 'analysis_results', ['audio_id'], unique=False)
    op.create_index('idx_analysis_created_by', 'analysis_results', ['created_by'], unique=False)
    op.create_index('idx_analysis_sentiment', 'analysis_results', ['sentiment_id'], unique=False)
    op.create_index(op.f('ix_analysis_results_id'), 'analysis_results', ['id'], unique=False)
    op.create_table('casenotes',
    sa.Column('case_id', sa.Integer(), nullable=False),
    sa.Column('audio_id', sa.Integer(), nullable=True),
    sa.Column('version', sa.Integer(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('created_by', sa.Integer(), nullable=False),
    sa.Column('is_private', sa.Boolean(), nullable=True),
    sa.Column('extra_metadata', sa.JSON(), nullable=True),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['audio_id'], ['audio_files.id'], ),
    sa.ForeignKeyConstraint(['case_id'], ['cases.id'], ),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_note_audio', 'casenotes', ['audio_id'], unique=False)
    op.create_index('idx_note_case', 'casenotes', ['case_id'], unique=False)
    op.create_index('idx_note_created_by', 'casenotes', ['created_by'], unique=False)
    op.create_index('idx_note_private', 'casenotes', ['is_private'], unique=False)
    op.create_index(op.f('ix_casenotes_id'), 'casenotes', ['id'], unique=False)
    op.create_table('transcriptions',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('text', sa.Text(), nullable=True),
    sa.Column('confidence', sa.Float(), nullable=True),
    sa.Column('duration', sa.Float(), nullable=True),
    sa.Column('created_at', sa.DateTime(), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.Column('task_id', sa.String(), nullable=True),
    sa.Column('audio_id', sa.Integer(), nullable=False),
    sa.Column('version', sa.Integer(), nullable=False),
    sa.Column('content', sa.Text(), nullable=False),
    sa.Column('language_id', sa.Integer(), nullable=False),
    sa.Column('created_by', sa.Integer(), nullable=False),
    sa.Column('confidence_score', sa.Integer(), nullable=True),
    sa.Column('processing_time', sa.Integer(), nullable=True),
    sa.Column('extra_metadata', sa.JSON(), nullable=True),
    sa.ForeignKeyConstraint(['audio_id'], ['audio_files.id'], ),
    sa.ForeignKeyConstraint(['created_by'], ['users.id'], ),
    sa.ForeignKeyConstraint(['language_id'], ['languages.id'], ),
    sa.ForeignKeyConstraint(['task_id'], ['tasks.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('audio_id', 'version', name='uq_transcription_audio_version')
    )
    op.create_index('idx_transcription_audio', 'transcriptions', ['audio_id'], unique=False)
    op.create_index('idx_transcription_created_by', 'transcriptions', ['created_by'], unique=False)
    op.create_index('idx_transcription_language', 'transcriptions', ['language_id'], unique=False)
    op.create_index(op.f('ix_transcriptions_id'), 'transcriptions', ['id'], unique=False)
    op.create_table('analysisdetails',
    sa.Column('analysis_id', sa.Integer(), nullable=False),
    sa.Column('detail_type', sa.String(length=50), nullable=False),
    sa.Column('content', sa.JSON(), nullable=False),
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(timezone=True), server_default=sa.text('now()'), nullable=True),
    sa.Column('updated_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['analysis_id'], ['analysis_results.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index('idx_detail_analysis', 'analysisdetails', ['analysis_id'], unique=False)
    op.create_index('idx_detail_type', 'analysisdetails', ['detail_type'], unique=False)
    op.create_index(op.f('ix_analysisdetails_id'), 'analysisdetails', ['id'], unique=False)
    # ### end Alembic commands ###

def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_analysisdetails_id'), table_name='analysisdetails')
    op.drop_index('idx_detail_type', table_name='analysisdetails')
    op.drop_index('idx_detail_analysis', table_name='analysisdetails')
    op.drop_table('analysisdetails')
    op.drop_index(op.f('ix_transcriptions_id'), table_name='transcriptions')
    op.drop_index('idx_transcription_language', table_name='transcriptions')
    op.drop_index('idx_transcription_created_by', table_name='transcriptions')
    op.drop_index('idx_transcription_audio', table_name='transcriptions')
    op.drop_table('transcriptions')
    op.drop_index(op.f('ix_casenotes_id'), table_name='casenotes')
    op.drop_index('idx_note_private', table_name='casenotes')
    op.drop_index('idx_note_created_by', table_name='casenotes')
    op.drop_index('idx_note_case', table_name='casenotes')
    op.drop_index('idx_note_audio', table_name='casenotes')
    op.drop_table('casenotes')
    op.drop_index(op.f('ix_analysis_results_id'), table_name='analysis_results')
    op.drop_index('idx_analysis_sentiment', table_name='analysis_results')
    op.drop_index('idx_analysis_created_by', table_name='analysis_results')
    op.drop_index('idx_analysis_audio', table_name='analysis_results')
    op.drop_table('analysis_results')
    op.drop_index(op.f('ix_activitylogs_id'), table_name='activitylogs')
    op.drop_index('idx_activity_user', table_name='activitylogs')
    op.drop_index('idx_activity_type', table_name='activitylogs')
    op.drop_index('idx_activity_task', table_name='activitylogs')
    op.drop_index('idx_activity_created', table_name='activitylogs')
    op.drop_index('idx_activity_case', table_name='activitylogs')
    op.drop_index('idx_activity_audio', table_name='activitylogs')
    op.drop_table('activitylogs')
    op.drop_index(op.f('ix_audio_files_id'), table_name='audio_files')
    op.drop_index('idx_audio_uploaded_by', table_name='audio_files')
    op.drop_index('idx_audio_storage', table_name='audio_files')
    op.drop_index('idx_audio_status', table_name='audio_files')
    op.drop_index('idx_audio_language', table_name='audio_files')
    op.drop_index('idx_audio_case', table_name='audio_files')
    op.drop_index('idx_audio_archived', table_name='audio_files')
    op.drop_table('audio_files')
    op.drop_index(op.f('ix_tasks_id'), table_name='tasks')
    op.drop_index('idx_task_user', table_name='tasks')
    op.drop_index('idx_task_updated_at', table_name='tasks')
    op.drop_index('idx_task_status', table_name='tasks')
    op.drop_index('idx_task_id', table_name='tasks')
    op.drop_index('idx_task_created_at', table_name='tasks')
    op.drop_table('tasks')
    op.drop_index(op.f('ix_summaries_id'), table_name='summaries')
    op.drop_index('idx_summary_case', table_name='summaries')
    op.drop_table('summaries')
    op.drop_index(op.f('ix_caseparticipants_id'), table_name='caseparticipants')
    op.drop_index('idx_participant_user', table_name='caseparticipants')
    op.drop_index('idx_participant_role', table_name='caseparticipants')
    op.drop_index('idx_participant_case', table_name='caseparticipants')
    op.drop_index('idx_participant_active', table_name='caseparticipants')
    op.drop_table('caseparticipants')
    op.drop_index(op.f('ix_cases_id'), table_name='cases')
    op.drop_index(op.f('ix_cases_case_code'), table_name='cases')
    op.drop_index('idx_case_status', table_name='cases')
    op.drop_index('idx_case_priority', table_name='cases')
    op.drop_index('idx_case_created_by', table_name='cases')
    op.drop_index('idx_case_code', table_name='cases')
    op.drop_index('idx_case_archived', table_name='cases')
    op.drop_table('cases')
    op.drop_index(op.f('ix_users_username'), table_name='users')
    op.drop_index(op.f('ix_users_id'), table_name='users')
    op.drop_index(op.f('ix_users_email'), table_name='users')
    op.drop_index('idx_user_username_email', table_name='users')
    op.drop_index('idx_user_status', table_name='users')
    op.drop_index('idx_user_role', table_name='users')
    op.drop_table('users')
    op.drop_index(op.f('ix_user_roles_role_name'), table_name='user_roles')
    op.drop_index(op.f('ix_user_roles_id'), table_name='user_roles')
    op.drop_table('user_roles')
    op.drop_index(op.f('ix_sentiments_id'), table_name='sentiments')
    op.drop_table('sentiments')
    op.drop_index(op.f('ix_participantroles_id'), table_name='participantroles')
    op.drop_table('participantroles')
    op.drop_index(op.f('ix_languages_id'), table_name='languages')
    op.drop_table('languages')
    op.drop_index(op.f('ix_casestatuses_id'), table_name='casestatuses')
    op.drop_table('casestatuses')
    op.drop_index(op.f('ix_casepriorities_id'), table_name='casepriorities')
    op.drop_table('casepriorities')
    op.drop_index(op.f('ix_audiostatuses_id'), table_name='audiostatuses')
    op.drop_table('audiostatuses')
    op.drop_index(op.f('ix_activitytypes_id'), table_name='activitytypes')
    op.drop_table('activitytypes')
    # ### end Alembic commands ### 